--- a/index.html
+++ b/index.html
@@ -298,7 +298,11 @@
       <footer class="footer" id="jump-to-footer">
         <div class="footer__columns">
           <div class="footer__column">
-            <img class="footer__logo" src="../images/logo_white.png" alt="picture of praticum logo"/>
+            <img
+              class="footer__logo"
+              src="../images/logo_white.png"
+              alt="picture of praticum logo"
+            />
           </div>
           <div class="footer__column">
             <div class="footer__column_content_hours">
@@ -317,21 +321,28 @@
               <h4 class="footer__column-heading">Social Media</h4>
               <ul class="footer__list">
                 <li class="footer__list-item">
-                  <img src="./images/facebook_white.svg" href="#" alt="pic of facebook logo" />
+                  <img
+                    src="./images/facebook_white.svg"
+                    alt="pic of facebook logo"
+                  />
                   <a class="footer__list-link" href="#">Facebook</a>
                 </li>
                 <li class="footer__list-item">
-                  <img src="./images/instagram_white.svg" alt="pic of instagram logo"/>
+                  <img
+                    src="./images/instagram_white.svg"
+                    alt="pic of instagram logo"
+                  />
                   <a
                     class="footer__list-link footer__list-item_last-row"
-                    href="#>
-                    >Instagram</a
+                    href="#"
+                  >
+                    Instagram</a
                   >
                 </li>
               </ul>
             </div>
+            <p class="footer__copyright">© 2023 Marlon Nunez</p>
           </div>
-          <p class="footer__copyright">© 2023 Marlon Nunez</p>
         </div>
       </footer>
     </div>
