--- a/index.html
+++ b/index.html
@@ -8,9 +8,7 @@
     <link rel="stylesheet" href="./styles/normalize.css" />
     <link rel="stylesheet" href="./styles/style.css" />
   </head>
-
   <body>
-    <!-- Wrap the entire page content in a new div with the page class. Remember to add the closing tag -->
     <div class="page">
       <header class="header">
         <nav class="nav">
@@ -304,45 +302,41 @@
               alt="picture of praticum logo"
             />
           </div>
-          <div class="footer__column">
-            <div class="footer__column_content_hours">
-              <h4 class="footer__column-heading">Hours</h4>
-              <ul class="footer__list">
-                <li class="footer__list-item">Weekdays: 9am – 8pm</li>
-                <li class="footer__list-item footer__list-item_last-row">
-                  Weekends: 10am – 6pm
-                </li>
-              </ul>
-            </div>
+
+          <div class="footer__column footer__column_content_hours">
+            <h4 class="footer__column-heading">Hours</h4>
+            <ul class="footer__list">
+              <li class="footer__list-item">Weekdays: 9am – 8pm</li>
+              <li class="footer__list-item footer__list-item_last-row">
+                Weekends: 10am – 6pm
+              </li>
+            </ul>
           </div>
 
-          <div class="footer__column">
-            <div class="footer__column_content_social">
-              <h4 class="footer__column-heading">Social Media</h4>
-              <ul class="footer__list">
-                <li class="footer__list-item">
-                  <img
-                    src="./images/facebook_white.svg"
-                    alt="pic of facebook logo"
-                  />
-                  <a class="footer__list-link" href="#">Facebook</a>
-                </li>
-                <li class="footer__list-item">
-                  <img
-                    src="./images/instagram_white.svg"
-                    alt="pic of instagram logo"
-                  />
-                  <a
-                    class="footer__list-link footer__list-item_last-row"
-                    href="#"
-                  >
-                    Instagram</a
-                  >
-                </li>
-              </ul>
-            </div>
-            <p class="footer__copyright">© 2023 Marlon Nunez</p>
+          <div class="footer__column footer__column_content_social">
+            <h4 class="footer__column-heading">Social Media</h4>
+            <ul class="footer__list">
+              <li class="footer__list-item">
+                <img
+                  src="./images/facebook_white.svg"
+                  alt="pic of facebook logo"
+                />
+                <a class="footer__column-link" href="#">Facebook</a>
+              </li>
+              <li class="footer__list-item">
+                <img
+                  src="./images/instagram_white.svg"
+                  alt="pic of instagram logo"
+                />
+                <a
+                  class="footer__column-link footer__list-item_last-row"
+                  href="#"
+                  >Instagram</a
+                >
+              </li>
+            </ul>
           </div>
+          <p class="footer__copyright">© 2023 Marlon Nunez</p>
         </div>
       </footer>
     </div>
