--- a/index.html
+++ b/index.html
@@ -318,21 +318,18 @@
             <ul class="footer__list">
               <li class="footer__list-item">
                 <img
+                  class="footer__social-icon"
                   src="./images/facebook_white.svg"
                   alt="pic of facebook logo"
                 />
-                <a class="footer__column-link" href="#">Facebook</a>
+                <a class="footer__column-link" href="#"> Facebook</a>
               </li>
               <li class="footer__list-item">
-                <img
-                  src="./images/instagram_white.svg"
-                  alt="pic of instagram logo"
-                />
+                <img class="footer__social-icon" src="./images/instagram_white.svg" alt="pic of instagram logo"/>
                 <a
                   class="footer__column-link footer__list-item_last-row"
-                  href="#"
-                  >Instagram</a
-                >
+                  href="#">Instagram</a>
+                </a>
               </li>
             </ul>
           </div>
