--- a/index.html
+++ b/index.html
@@ -325,11 +325,16 @@
                 <a class="footer__column-link" href="#"> Facebook</a>
               </li>
               <li class="footer__list-item">
-                <img class="footer__social-icon" src="./images/instagram_white.svg" alt="pic of instagram logo"/>
+                <img
+                  class="footer__social-icon"
+                  src="./images/instagram_white.svg"
+                  alt="pic of instagram logo"
+                />
                 <a
                   class="footer__column-link footer__list-item_last-row"
-                  href="#">Instagram</a>
-                </a>
+                  href="#"
+                  >Instagram</a
+                >
               </li>
             </ul>
           </div>
