--- a/index.html
+++ b/index.html
@@ -307,9 +307,7 @@
             <h4 class="footer__column-heading">Hours</h4>
             <ul class="footer__list">
               <li class="footer__list-item">Weekdays: 9am – 8pm</li>
-              <li class="footer__list-item footer__list-item_last-row">
-                Weekends: 10am – 6pm
-              </li>
+              <li class="footer__list-item">Weekends: 10am – 6pm</li>
             </ul>
           </div>
 
@@ -330,11 +328,7 @@
                   src="./images/instagram_white.svg"
                   alt="pic of instagram logo"
                 />
-                <a
-                  class="footer__column-link footer__list-item_last-row"
-                  href="#"
-                  >Instagram</a
-                >
+                <a class="footer__column-link" href="#">Instagram</a>
               </li>
             </ul>
           </div>
