--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
         <section class="staff" id="jump-to-staff-section">
           <h2 class="staff__title">Staff picks</h2>
           <p class="staff__subtitle">That our readers love</p>
-          <ul class="staff__list">
+          <ul class="staff__cards">
             <li class="card">
               <div class="card__content">
                 <h3 class="card__title">Introduction to Algorithms</h3>
@@ -302,7 +302,6 @@
               alt="picture of praticum logo"
             />
           </div>
-
           <div class="footer__column footer__column_content_hours">
             <h4 class="footer__column-heading">Hours</h4>
             <ul class="footer__list">
@@ -310,7 +309,6 @@
               <li class="footer__list-item">Weekends: 10am – 6pm</li>
             </ul>
           </div>
-
           <div class="footer__column footer__column_content_social">
             <h4 class="footer__column-heading">Social Media</h4>
             <ul class="footer__list">
@@ -322,6 +320,7 @@
                 />
                 <a class="footer__column-link" href="#"> Facebook</a>
               </li>
+
               <li class="footer__list-item">
                 <img
                   class="footer__social-icon"
