--- a/index.html
+++ b/index.html
@@ -313,21 +313,23 @@
             <h4 class="footer__column-heading">Social Media</h4>
             <ul class="footer__list">
               <li class="footer__list-item">
-                <img
-                  class="footer__social-icon"
-                  src="./images/facebook_white.svg"
-                  alt="pic of facebook logo"
-                />
-                <a class="footer__column-link" href="#"> Facebook</a>
+                <a class="footer__column-link" href="#"
+                  ><img
+                    class="footer__social-icon"
+                    src="./images/facebook_white.svg"
+                    alt="pic of facebook logo"
+                  />
+                  Facebook</a
+                >
               </li>
-
               <li class="footer__list-item">
-                <img
-                  class="footer__social-icon"
-                  src="./images/instagram_white.svg"
-                  alt="pic of instagram logo"
-                />
-                <a class="footer__column-link" href="#">Instagram</a>
+                <a class="footer__column-link" href="#"
+                  ><img
+                    class="footer__social-icon"
+                    src="./images/instagram_white.svg"
+                    alt="pic of instagram logo"
+                  />Instagram</a
+                >
               </li>
             </ul>
           </div>
