--- a/index.html
+++ b/index.html
@@ -50,7 +50,9 @@
           class="header__image"
         />
         <div class="header__footer">
-          <a class="header__link">About the library &darr;</a>
+          <a class="header__link" href="#go-to-about-section"
+            >About the library &darr;</a
+          >
           <p class="header__address">
             200 Success Avenue, The Town of Practicum
           </p>
@@ -93,7 +95,7 @@
             <img
               class="events__image"
               src="./images/cafe.png"
-              alt="picture of cafe"
+              alt="animated photo of a coffee shop"
             />
             <div class="person person_name_feynman">
               <p class="person__caption">Joan Feynman</p>
@@ -269,7 +271,9 @@
         </section>
 
         <section class="about" id="jump-to-about">
-          <h2 class="about__title">About the library</h2>
+          <h2 class="about__title" id="go-to-about-section">
+            About the library
+          </h2>
           <div class="about__content">
             <p class="about__paragraph">
               Libraries are essential establishments in practically every city,
@@ -298,7 +302,7 @@
           <div class="footer__column">
             <img
               class="footer__logo"
-              src="../images/logo_white.png"
+              src="./images/logo_white.png"
               alt="picture of praticum logo"
             />
           </div>
@@ -317,7 +321,7 @@
                   ><img
                     class="footer__social-icon"
                     src="./images/facebook_white.svg"
-                    alt="pic of facebook logo"
+                    alt="facebook logo"
                   />
                   Facebook</a
                 >
@@ -327,7 +331,7 @@
                   ><img
                     class="footer__social-icon"
                     src="./images/instagram_white.svg"
-                    alt="pic of instagram logo"
+                    alt="instagram logo"
                   />Instagram</a
                 >
               </li>
